# pkg/core/gen/core_proto/protocol.swagger.json
@@ -224,6 +224,10 @@
             "type": "object",
             "$ref": "#/definitions/protocolSignedTransaction"
           }
+        },
+        "currentHeight": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
